--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Merouane Boucenna",
   "description": "colors palettes selector",
   "main": "/dist/index.js",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "scripts": {
     "dev": "vue serve src/test.vue",
     "build": "bili --name index --plugin vue --vue.css false"
