--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "private": false,
   "name": "vue-palette",
   "version": "1.0.0",
-  "author": "Merouane Boucenna",
+  "author": "merbou",
   "description": "colors palettes selector",
   "main": "/dist/index.js",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "scripts": {
     "dev": "vue serve src/test.vue",
     "build": "bili --name index --plugin vue --vue.css false"
