--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "vue-palettes",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "Merouane Boucenna",
   "description": "colors palettes selector",
   "main": "/dist/index.js",
@@ -17,5 +17,9 @@
     "bili": "^5.0.5",
     "rollup-plugin-vue": "^5.1.9",
     "vue-template-compiler": "^2.6.11"
+  },
+    "repository": {
+    "type" : "git",
+    "url" : "https://github.com/Merbou/vue-palettes"
   }
 }
